--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "vim/.vim/bundle/CamelCaseMotion.vim"]
 	path = vim/.vim/bundle/CamelCaseMotion.vim
 	url = https://github.com/bkad/CamelCaseMotion
+[submodule "vim/.vim/bundle/emmet-vim"]
+	path = vim/.vim/bundle/emmet-vim
+	url = https://github.com/mattn/emmet-vim.git
