--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,30 +1,41 @@
-# Include user settings from a file in the home directory
-[include]
-  path = ~/.gitconfig.local
-[push]
-  default = simple
-[merge]
-  tool = vimdiff
-[core]
-  editor = vim
-  ignorecase = false
-  excludesfile = ~/.gitignore_global
-[alias]
-  # Source of conflicts script: https://gist.github.com/jacobvosmaer/3187346
-  conflicts = !git diff --name-only --diff-filter=U --relative -z | xargs -0
-  aliases = !git config --get-regexp 'alias.*' | colrm 1 6 | sed 's/[ ]/ = /' | sort
-  s = status
-  d = diff
-  co = checkout
-  cob = checkout -b
-  wip = !git add -A && git commit -m 'wip'
-  cm = commit -m
-  ca = commit --amend
-  cae = commit --amend --no-edit
-  pushhard = push --no-verify -f
-  l = log --graph --pretty=format:'%Cred%h%Creset - %Cblue%an%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
-  wtf = "! git log --pretty=tformat:\"%C(auto,yellow)%h%C(auto)%d%C(auto,reset) by %C(auto,blue)%cn%C(auto,reset), %C(auto,cyan)%ar%C(auto,reset)%n %s%n\" --stat"
+
+[user]
+	name = Taylor King
+	email = dekkofilms@gmail.com
 [credential]
-  helper = osxkeychain
-[diff]
-  algorithm = patience
+	helper = osxkeychain
+[core]
+
+  # You can specify your preferred git editor here if you don't want to set an environment variable.
+	editor = nano
+
+  # Mac will ignore file cases by default
+	ignorecase = false
+
+[alias]
+
+  s = status
+
+  d = diff
+
+  co = checkout
+
+  cob = checkout -b
+
+  # List all current aliases
+  aliases = !git config --get-regexp 'alias.*' | colrm 1 6 | sed 's/[ ]/ = /' | sort
+
+  # List commit ancestry in a dense, useful format that includes short SHA1 hashes
+  ls = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=short
+
+  # Alias for commitizen
+  cm = cz
+
+  # Meld staged changes into previous commit and edit commit message
+  ca = commit --amend
+
+  # Meld staged changes into previous commit without changing commit message
+  cae = commit --amend --no-edit
+
+  # Add all unstaged changes and commit with "wip" message (use sparingly)
+  wip = !git add -A && git commit -m 'wip'
