--- a/.gitmodules
+++ b/.gitmodules
@@ -37,9 +37,6 @@
 [submodule "vim/.vim/bundle/vim-polyglot"]
 	path = vim/.vim/bundle/vim-polyglot
 	url = https://github.com/sheerun/vim-polyglot.git
-[submodule "tmux/.tmux/plugins/resurrect"]
-	path = tmux/.tmux/plugins/resurrect
-	url = https://github.com/tmux-plugins/tmux-resurrect.git
 [submodule "vim/.vim/bundle/vim-startify"]
 	path = vim/.vim/bundle/vim-startify
 	url = https://github.com/mhinz/vim-startify.git
@@ -64,3 +61,6 @@
 [submodule "vim/.vim/bundle/python-syntax"]
 	path = vim/.vim/bundle/python-syntax
 	url = https://github.com/vim-python/python-syntax.git
+[submodule "tmux/.tmux/plugins/tmux-resurrect"]
+	path = tmux/.tmux/plugins/tmux-resurrect
+	url = https://github.com/tmux-plugins/tmux-resurrect
